5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1716_2498.log
== SUBMITION (2019-05-14 17:10:46) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

num = 0

while (na <= nb):
	a += pa/100
	b += pb/100
	num += +1
print(num)
-- EXECUTION TIME:
0.136604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 9, in <module>
    a += pa/100
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:11:44) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

num = 0

while (na <= nb):
	a += *pa/100
	b += *pb/100
	num += +1
print(num)
-- EXECUTION TIME:
0.143478
-- ERROR:
  File "/home/codebench/codes/1716/2498/main.py", line 9
    a += *pa/100
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:11:48) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

num = 0

while (na <= nb):
	a += *pa/100
	b += *pb/100
	num += +1
print(num)
-- EXECUTION TIME:
0.1422
-- ERROR:
  File "/home/codebench/codes/1716/2498/main.py", line 9
    a += *pa/100
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:11:49) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

num = 0

while (na <= nb):
	a += *pa/100
	b += *pb/100
	num += +1
print(num)
-- EXECUTION TIME:
0.179053
-- ERROR:
  File "/home/codebench/codes/1716/2498/main.py", line 9
    a += *pa/100
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:11:49) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

num = 0

while (na <= nb):
	a += *pa/100
	b += *pb/100
	num += +1
print(num)
-- EXECUTION TIME:
0.193721
-- ERROR:
  File "/home/codebench/codes/1716/2498/main.py", line 9
    a += *pa/100
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:13:45) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

num = 0

while (na <= nb):
	c1 = na*pa/100
	na = na + c1
	c2 = nb*pb/100
	nb = nb + c2
	num += 1
print(num)
-- EXECUTION TIME:
0.166893
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
